# noalbs-gui

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-13-noalbsgui-p1-skeleton.md  2026-06-13-noalbsgui-p2a-config-model-editor.md  2026-06-13-noalbsgui-p2b-streamservers-editor.md  2026-06-13-noalbsgui-p2c-chat-env.md  2026-06-13-noalbsgui-p3-dashboard.md  (+1 more)
src/: App.tsx  api.ts  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: binary.rs  commands.rs  config.rs  env_file.rs  error.rs  lib.rs  main.rs  process.rs  settings.rs  status.rs
src/bindings/: BackupInfo.ts  BelaboxConfig.ts  BinarySource.ts  Chat.ts  ChatPlatform.ts  CollectionPair.ts  CommandInfo.ts  Config.ts  DashboardSnapshot.ts  DependsOn.ts  EnvValues.ts  IrlhostingConfig.ts  KickConfig.ts  LogLine.ts  LogStream.ts  MediamtxConfig.ts  NginxConfig.ts  NimbleConfig.ts  NoalbsStatus.ts  NodeMediaServerConfig.ts  ObsConfig.ts  ObsConnection.ts  OpenIrlConfig.ts  OptionalOptions.ts  OptionalScenes.ts  RistConfig.ts  SaveConfigResult.ts  ServerAuth.ts  Settings.ts  SoftwareConnection.ts  SrtLiveServerConfig.ts  StreamServerEntry.ts  StreamServerKind.ts  Switcher.ts  SwitchingScenes.ts  Theme.ts  Triggers.ts  TwitchStatus.ts  User.ts  XiuConfig.ts
src/components/: DashboardTab.tsx  LogsTab.tsx  SettingsTab.tsx  UpdateBanner.tsx
src/config/: ConfigTab.tsx  RawJsonEditor.tsx  StringListEditor.tsx  chatMeta.ts  focusEnv.ts  serverTypes.ts  useConfig.ts
(+9 files in other folders)
